test/unique/neg/unique-field.check
unique-field.scala:10: error: cannot assign to unique field
    f = x
      ^
one error found
